Fix build status column

--- a/all-builds-view-server/src/main/resources/buildServerResources/css/allBuilds.css
+++ b/all-builds-view-server/src/main/resources/buildServerResources/css/allBuilds.css
@@ -18,3 +18,7 @@ table.buildsListTable td {
     padding: .3em 0 .3em 0.3em;
     vertical-align: top;
 }
+
+table.buildsListTable td:last-child {
+    width: 40%;
+}
